--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.3.0",
-    "vite-plugin-pwa": "^0.20.0"
+    "vite": "^5.3.0"
   }
 }
